--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -77,7 +77,7 @@
           <th class="requestsubject" style="width:20%", "position:absolute">Subject</th> 
           <th class="requestday" style="width:20%", "position:absolute">Day</th> 
           <th class="requestday" style="width:15%", "position:absolute">Asked on</th> 
-          <!--<th class="requestday" style="width:10%", "position:absolute">Options</th> -->
+          <th class="requestday" style="width:10%", "position:absolute">Options</th> 
            <th class="requestday" style="width:10%", "position:absolute">Accept?</th>    <!-- used to say "Did you meet?" -->
         </tr>
         
@@ -92,11 +92,11 @@
                   <th class="requestday" style="width:20%", "position:absolute"> <%= i.time %></th> 
                   <th class="requestday" style="width:15%", "position:absolute"> <%= i.created_at.strftime("%m-%d-%y") %><br>(<%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%I:%M %P") %>)</th> 
                    
-                  <!--<th class="tutoringoptions" class="delete" style="width: 10%", "position:absolute"> /%= link_to " Delete", requestdelete_path(check: i.id), method: :delete, data: { confirm: "Are you sure?" } %></th>-->
+                  <th class="tutoringoptions" class="delete" style="width: 10%", "position:absolute"> <%= link_to " Delete", requestdelete_path(check: i.id), method: :delete, data: { confirm: "Are you sure?" } %></th>
                   <% if(i.accepted) %>
                      <th class="tutoringoptions", style="width: 10%", "position:absolute"> Accepted </th>
                   <% else %>
-                    <th class="tutoringoptions", style="width: 10%", "position:absolute"><%= link_to "Yes", {:controller => :tutor_requests, :action => :makeAccepted, :check => i.id},  :method => :post, data: { confirm: "Accept request?" } %> | <%= link_to "No", requestdelete_path(check: i.id), method: :delete, data: { confirm: "Decline request? This action cannot be reversed and will delete the request" } %></th>
+                    <th class="tutoringoptions", style="width: 10%", "position:absolute"><%= link_to "Yes", {:controller => :tutor_requests, :action => :makeAccepted, :check => i.id, :receiverEmail => i.email},  :method => :post, data: { confirm: "Accept request?" } %> | <%= link_to "No", decline_path(check: i.id), method: :post, data: { confirm: "Decline request? This action cannot be reversed and will delete the request" } %></th>
                   <% end %>
                 </tr>
                 <%# session[:selected_subject_id] = i.id %>
