--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,52 +8,6 @@
 </head>
 <body id="body">
 	<%= render 'layouts/header' %>
-<!--	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="bg-dark">-->
-<!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--    <span class="navbar-toggler-icon"></span>-->
-<!--  </button>-->
-<!--  <div class="collapse navbar-collapse" id="navbarText">-->
-<!--    <ul class="navbar-nav mr-auto">-->
-<!--      <li class="nav-item active">-->
-<!--        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>-->
-<!--      </li>-->
-<!--      <li class="nav-item">-->
-<!--        <a class="nav-link" href="/about">About</a>-->
-<!--      </li>-->
-<!--      <li class="nav-item">-->
-<!--        <a class="nav-link" href="/help">Help</a>-->
-<!--      </li>-->
-<!--      <li class="nav-item">-->
-<!--        <a class="nav-link" href="/studygroup">Study Group</a>-->
-<!--      </li>-->
-      
-<!--      <% if Person.find_by(id: session[:tutor_id]) %>-->
-<!--        <div class="dropdown">-->
-<!--            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-<!--              Account-->
-<!--            </button>-->
-<!--          <ul class="dropdown-menu">-->
-<!--           <% if Person.find_by(id: session[:tutor_id]).admin? %>-->
-<!--              <li class = "dropdown-item"><%= link_to "Profile", adminPage_path %></li>-->
-<!--            <% else %>-->
-<!--              <li class = "dropdown-item"><%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>-->
-<!--            <% end %>-->
-<!--            <li class="divider"></li>-->
-<!--            <li class = "dropdown-item">-->
-<!--              <%= link_to "Log out", logout_path, method: :delete %>-->
-<!--            </li>-->
-<!--          </ul>-->
-<!--      </ul>-->
-      
-<!--    </div>-->
-    
-<!--      <% else %>-->
-        
-<!--      <% end %>-->
-      
-<!--    </ul>-->
-<!--  </div>-->
-<!--</nav>-->
 	
 	
 	<div style= "height: 100%" class="large_content">
@@ -62,38 +16,25 @@
 			<p id="homep">Welcome to Tutor Matching! Click a button below to sign up to tutor others or to receive tutoring. </p>		
 		</div>
 			
-		<!--<a href="/signup" id="animatedbutton">-->
-		<!--  I'm a Student-->
-				<!--<button id="button" class="button-responsive"> Find a Tutor</button>	-->
-		<!--</a>-->
 		<% if !Person.find_by(id: session[:tutor_id]) %>
-  		<a href="/tutorsignup" id="animatedbutton">
-  		  Sign up as a tutor
-  			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
-  		</a>
-  	<% end %>
+	  		<a href="/tutorsignup" id="animatedbutton">
+	  		  Sign up as a tutor
+	  		</a>
+  		<% end %>
+  		
 		<a href="/findatutor" id="animatedbutton">
 		  Find a tutor
-			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
 		</a>
 			
 		<div><p></p></div>
-		  <% if !Person.find_by(id: session[:tutor_id]) %>
+		 <% if !Person.find_by(id: session[:tutor_id]) %>
 		  	<a href="/login" id="animatedbutton">
 		    Login
-			<!--<button id="tutor" class="button-responsive"> Login </button>-->
 	    	</a>
 	    <% end %>
- 	<!--</div>-->
- 	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
-	<!--<center>-->
-	 	<!--<div class="small_content">-->
-			<!--Need Help? 		-->
-	 	<!-- 	<p>-->
-	 	<!-- 		Our website will match you with a tutor in any subject - just click the button, enter your name, grade, and the subject in which you need help.-->
-	 	 			
-	 	<!-- 	</p>-->
- 	 <!--	</div>-->
- 	<!--</center>-->
+	    
+	 <!--   <a href="/joinZoom" id="zoombutton">-->
+		<!--  ZOOM-->
+		<!--</a>-->
 </body>
 </html>
