--- a/app/views/people/adminPage.html.erb
+++ b/app/views/people/adminPage.html.erb
@@ -51,8 +51,8 @@
   <div class="row">
     <aside class="col-md-4">
       <section class="tutor_info">
-        <h1>
-          <!--%= gravatar_for @person %>-->
+        <h2>
+  
           <div id="bob">
             <p><%= @person.name %> (<%= @person.email %>) </p>
           </div>
@@ -62,8 +62,6 @@
           <div><br>
              <%= link_to "Admin actions", people_path(@person), {:style=>"color:#fff;"} %>
           </div>
-         
-          <!--<button class="btn btn-warning" id="edit_profile">-->
           
           <div>
             <h2 id="downloadExcel">
@@ -73,18 +71,17 @@
           </div>
           </h1>
           <br><br><br>
-          <a href="/import_from_excel" id="specialanimatedbutton", style="margin-left: 7.5%; width:45%;">
+          <a href="/import_from_excel" id="specialanimatedbutton", style="margin-left: 0.1vw; width:45%;">
 		        Import CV student list (excel sheet)
 	    	  </a>
-	    	  <a href="/godaction" id="specialanimatedbutton", style="margin-left: 7.5%; width:45%;">
+	    	  <a href="/godaction" id="specialanimatedbutton", style="margin-left: 0.1vw; width:45%;">
 		        Update old date to days attribute
 	    	  </a>
-	    	  <%= link_to "Send email", {:action => :sendemail}, :method => :post %>
 	    	  <h1>
-	    	  <div class="btn btn-primary" id="delete_account_admin">
+	    	  <div class="btn btn-primary" id="delete_account_admin", style="margin-left: 0.1vw;">
             <%= link_to "Delete Account", @person, method: :delete, data: {confirm: "Are you sure you want to delete your account?"} %>   <!--instead of accountDelete_path just submit the current person DDDD accountDelete_path(id: Tutor.find_by(people_id: @person.id).id)-->  
 	    	  </div>
-        </h1>
+        </h2>
         
       </section>
     </aside>
