Added sort by grade for admin page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1194,6 +1194,9 @@ ul.tutors li img{
 a{
 	color: white;
 }
+#av2{
+	color: blue !important;
+}
 #editprofile{
 	color: white;
 	text-decoration: underline;
@@ -1531,4 +1534,7 @@ input[type="checkbox"]:focus{
 }
 #email{
 	margin-bottom: 2vh !important;
+}
+.adminPageGradeName{
+	color: white;
 }
