--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -14,8 +14,18 @@
 <ul class="tutors">
     
 <%= will_paginate %>
-  <%= render @people %>
+  <!--%= render @people %>-->
+  <h1 class="adminPageGradeName">Seniors</h1>
+  <%= render partial: "seniors", collection: @seniors %>
   
+  <h1 class="adminPageGradeName">Juniors</h1>
+  <%= render partial: "juniors", collection: @juniors %>
+  
+  <h1 class="adminPageGradeName">Sophomores</h1>
+  <%= render partial: "sophomores", collection: @sophomores %>
+  
+  <h1 class="adminPageGradeName">Freshmen</h1>
+  <%= render partial: "freshmen", collection: @freshmen %>
 <%= will_paginate %>
 </ul>
 
