--- a/app/views/cvstudents/gohere.html.erb
+++ b/app/views/cvstudents/gohere.html.erb
@@ -65,6 +65,6 @@
 
 <!-- CLEAR ALL BUTTON -->
 <br><br>
-<%= link_to "Clear CV Student list", clear_path %>
+<div id="clear_users"><%= link_to "Clear CV Student list", clear_path %></div>
 
 </center>
