--- a/app/views/cvstudents/gohere.html.erb
+++ b/app/views/cvstudents/gohere.html.erb
@@ -3,7 +3,7 @@
   	<script src="jquery-3.3.1.min.js"></script>
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
-<body id="" style="background-color:white;" style="font-family: Signika">
+<body style="background-color: rgba(230,230,230,1);" style="font-family: Signika">
   <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
@@ -43,28 +43,29 @@
           </ul>
       </ul>
       </nav>
-      <!--<a class="navbar-brand" href="/home">CV Enterprises</a>-->
+      <a class="navbar-brand" href="/home">CV Enterprises</a>
     </div>
       </ul>
     </div>
   </nav>
-  <% provide(:title, "Import from excel") %>
+    
+    <% provide(:title, "Import from excel") %>
+    <div class="large_content">
+      <h1>Import From Excel</h1>
+    </div>
+    <br>
+    <center>
+      <!-- CLEAR ALL BUTTON -->
+      <div id="clear_users"><%= link_to "Clear CV Student list", clear_path, data: { confirm: "Are you sure?" } %></div>
+      <br><br>
+      <hr>
+      <h1>Import student list file</h1>
+      <form enctype="multipart/form-data" action="/import_from_excel" accept-charset="UTF-8" method="post">
+        <input name="utf8" type="hidden" value="&#x2713;"/>
+        <input type="hidden" name="authenticity_token" value="Xr5quy0eOUZXFNewNOTvN1557aBD2muQwPH3GNUFihV8BL5WBO1jW3aeA4qJF3RAgkloUZtNlfxOwuoWQpX6cw==" />
+        <input type="file" name="file" id="file" class="animatedbutton" />
+        <input type="submit" name="commit" value="Import" class="btn btn-primary" data-disable-with="Import" />
+      </form>
 
-
-<div class="large_content">
-  <h1>Import From Excel</h1>
-</div>
-<center>
-  <form enctype="multipart/form-data" action="/import_from_excel" accept-charset="UTF-8" method="post">
-    <input name="utf8" type="hidden" value="&#x2713;"/>
-    <input type="hidden" name="authenticity_token" value="Xr5quy0eOUZXFNewNOTvN1557aBD2muQwPH3GNUFihV8BL5WBO1jW3aeA4qJF3RAgkloUZtNlfxOwuoWQpX6cw==" />
-    <input type="file" name="file" id="file" class="animatedbutton" />
-    <input type="submit" name="commit" value="Import" class="btn btn-primary" data-disable-with="Import" />
-  </form>
-
-
-<!-- CLEAR ALL BUTTON -->
-<br><br>
-<div id="clear_users"><%= link_to "Clear CV Student list", clear_path %></div>
-
-</center>
+    </center>
+</body>
