--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -17,8 +17,7 @@
 		</div>
 			
  	</div>
- 	
- 	<!--<div><p></p></div>-->
+
  	<% @checker = false  %>
  	    <% if @subjuctivos.nil? %>
  	      <%= render 'shared/error_messages_search' %>
@@ -29,20 +28,18 @@
    	            <% if (Person.find_by(id: subjuctivo.creatorid).nil?)%>
    	              
    	            <% else %>
-   	                <!--new thing vikram implemented on 8/26-->
    	                <% @checker = true %>
    	                <div class = "tutordisplaycard searchresultslargecontainer">
                 			<div class="tutorgrade">
-                				<%= Tutor.find_by(people_id: subjuctivo.creatorid).grade %>
-                				<!--Adarsh i need you to put the Carrot Percent thing for tutor's grade here  *DONE*(-->
+                				<div class="tutorGradeLabel">
+                				  <h2>Grade</h2><%= Tutor.find_by(people_id: subjuctivo.creatorid).grade %>
+                				</div>
                 			</div>
                 			<div class="tutorname">
-                			  <!--%= link_to Person.find_by(id: subjuctivo.creatorid).name, selectedTutor_path(helpthevariables: Person.find_by(id: subjuctivo.creatorid).email, searchName: params[:searchName], searchDate: params[:searchDate]) %>-->
-                			  <%= Person.find_by(id: subjuctivo.creatorid).name %>
+                			   <%= Person.find_by(id: subjuctivo.creatorid).name %>
                 			</div>
                 			<div class="date">
-                			  
-                				<%= subjuctivo.date %>, <%= subjuctivo.days.join(', ')%>
+                				<%= subjuctivo.days.join(', ')%>
                 			</div>
                 			<% if Person.find_by(id: subjuctivo.creatorid).academy %>
                 			  <div class="rate">
@@ -50,13 +47,17 @@
                   			</div>
                   			<div class="location">
                     			 <i class="fa fa-map-marker fa-2x"></i>
-                    			  <div class="loc-popup">CV Library</div>
+                    			  <!--<div class="loc-popup">CV Library</div>-->
+                    			  <div class="loc-popup">Virtual Tutoring</div>
                     		</div>
                 			<% else %>
                   			<div class="rate">
                   				Rate: <%= subjuctivo.rate %>
                   			</div>
                   		<% end %>
+                  		<div class="timeslot">
+                				<%= subjuctivo.timeslot %>
+                			</div>
                     <div class="request_container nodisplay">
                           <div class="tutorsendrequest">
                                 <%= form_tag(request_path(tutoremail: Person.find_by(id: subjuctivo.creatorid).email, whichSubject: subjuctivo.name, time: subjuctivo.date), method: :post) do %> <!-- params[:name] is for the tutor's email I just have too much to do rn to change the attribute name -->
