--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -64,7 +64,8 @@
           <th class="requestname" style="width:16.1%", "position:absolute">Student name</th>
           <th class="requestemail" style="width:25%", "position:absolute">Email</th> 
           <th class="requestsubject" style="width:20%", "position:absolute">Subject</th> 
-          <th class="requestday" style="width:20%", "position:absolute">Day</th> 
+          <th class="requestday" style="width:20%", "position:absolute">Day</th>
+          <th class="requestday" style="width:20%", "position:absolute">Time Slot</th>
           <th class="requestday" style="width:15%", "position:absolute">Asked on</th> 
           <th class="requestday" style="width:10%", "position:absolute">Options</th> 
            <th class="requestday" style="width:10%", "position:absolute">Accept?</th> 
@@ -79,6 +80,7 @@
                   <th class="requestemail" style="width:25%", "position:absolute"> <%= i.email %></th> 
                   <th class="requestsubject" style="width:20%", "position:absolute"> <%= i.whichSubject %></th> 
                   <th class="requestday" style="width:20%", "position:absolute"> <%= i.time %></th> 
+                  <th class="requestday" style="width:20%", "position:absolute"> <%= i.timeslot %></th>
                   <th class="requestday" style="width:15%", "position:absolute"> <%= i.created_at.strftime("%m-%d-%y") %><br>(<%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%I:%M %P") %>)</th> 
                    
                   <th class="tutoringoptions" class="delete" style="width: 10%", "position:absolute"> <%= link_to " Delete", requestdelete_path(check: i.id), method: :delete, data: { confirm: "Are you sure?" } %></th>
