--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -768,25 +768,27 @@ ul.tutors li img{
 	// font-size: 20px;
 	font-family: "Red Hat Text";  //"Cabin"
 	position: absolute;
-	right: 4%;
-	bottom: 1.1666vw; //1.5666vw
+	//right: 4%;
+	left: 31.5%;
+	bottom: 3vw; //1.5666vw
 	font-size: 1vw;
 }	
 .rate{
 	float: left;
 	position: absolute;
-	left: 34%;
-	bottom: 3vw;
+	left: 31.5%;
+	bottom: 5vw;
 	font-family: "Red Hat Text";
 	font-size: 1vw;
 }
 .timeslot{
 	float: right;
 	position: absolute;
-	right: 4%;
-	bottom: 3vw;
+	//right: 4%;
+	left: 31.5%;
+	bottom: 1.166vw;
 	font-family: "Red Hat Text";
-	font-size: 1vw;
+	font-size: 0.9vw;
 }
 .tutorsendrequest{
 	// border: 1px solid black;
