--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -22,9 +22,10 @@
             <tr>
               <th class="tutoringsubject" style="width:43%", "position:absolute">Tutoring:</th>
               <th class="tutoringday" style="width:22%", "position:absolute">Day(s)</th> 
-              <th class="tutoringday" style="width:22%", "position:absolute">Time Slot</th> 
-               <% if !@person.academy %>
+              <% if !@person.academy %>
                  <th class="tutoringrate" style="width:15%", "position:absolute">Rate</th>
+              <% else %>
+                 <th class="tutoringday" style="width:22%", "position:absolute">Time Slot</th>
               <% end %>
               <th class="tutoringoptions" style="width:24%", "position:absolute">Options <div><%= link_to "Delete All", subjectdelete_path(check: -2), method: :destroy,
                                   data: { confirm: "Are you sure?" } %></div></th>
@@ -37,9 +38,10 @@
                     <tr>
                       <th class="tutoringsubject" style="width:43%", "position:absolute"> <%= i.name %></th>
                       <th class="tutoringday" style="width:22%", "position:absolute"> <%= i.days.join(', ') %></th> 
-                      <th class="tutoringday" style="width:22%", "position:absolute"> <%= i.timeslot %></th>
                         <% if !@person.academy %>
-                            <th class="tutoringrate" style="width:15%", "position:absolute"> <%= i.rate %></th>
+                          <th class="tutoringrate" style="width:15%", "position:absolute"> <%= i.rate %></th>
+                        <% else %>
+                          <th class="tutoringday" style="width:22%", "position:absolute"> <%= i.timeslots.join(', ') %></th>
                         <% end %>
                       
                       <th class="tutoringoptions" class="delete" style="width: 24%"><%= link_to " Delete", subjectdelete_path(check: i.id), method: :destroy,
@@ -65,7 +67,9 @@
           <th class="requestemail" style="width:25%", "position:absolute">Email</th> 
           <th class="requestsubject" style="width:20%", "position:absolute">Subject</th> 
           <th class="requestday" style="width:20%", "position:absolute">Day</th>
-          <th class="requestday" style="width:20%", "position:absolute">Time Slot</th>
+          <% if @person.academy %>
+            <th class="requestday" style="width:20%", "position:absolute">Time Slots</th>
+          <% end %>
           <th class="requestday" style="width:15%", "position:absolute">Asked on</th> 
           <th class="requestday" style="width:10%", "position:absolute">Options</th> 
            <th class="requestday" style="width:10%", "position:absolute">Accept?</th> 
@@ -80,7 +84,9 @@
                   <th class="requestemail" style="width:25%", "position:absolute"> <%= i.email %></th> 
                   <th class="requestsubject" style="width:20%", "position:absolute"> <%= i.whichSubject %></th> 
                   <th class="requestday" style="width:20%", "position:absolute"> <%= i.time %></th> 
-                  <th class="requestday" style="width:20%", "position:absolute"> <%= i.timeslot %></th>
+                  <% if @person.academy %>
+                    <th class="requestday" style="width:20%", "position:absolute"> <%= i.timeslots.join(', ') %></th>
+                  <% end %>
                   <th class="requestday" style="width:15%", "position:absolute"> <%= i.created_at.strftime("%m-%d-%y") %><br>(<%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%I:%M %P") %>)</th> 
                    
                   <th class="tutoringoptions" class="delete" style="width: 10%", "position:absolute"> <%= link_to " Delete", requestdelete_path(check: i.id), method: :delete, data: { confirm: "Are you sure?" } %></th>
