--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1411,7 +1411,7 @@ input[type="checkbox"]:focus{
 	.studygroupdisplaycard, .tutordisplaycard{
 		width: 85vw !important;
 		max-width: 100vw !important;
-		height: 15vh !important;
+		height: 18vh !important;
 	}
 	.groupsize{
 		padding: 5px !important;
@@ -1422,6 +1422,9 @@ input[type="checkbox"]:focus{
 		height: 100% !important;
 		font-size: 55px !important;
 		padding: 10px !important;
+	}
+	.tutorGradeLabel h2{
+		font-size: 20px !important;
 	}
 	.availablespots{
 		font-size: 3vw !important;
@@ -1438,7 +1441,8 @@ input[type="checkbox"]:focus{
 		font-size: 4vw !important;
 	}
 	.location{
-		font-size: 15px !important;
+		font-size: 0px !important;
+		//font-size: 15px !important;
 	}
 	.creatorname{
 		margin-bottom: 2vh !important;
@@ -1446,10 +1450,16 @@ input[type="checkbox"]:focus{
 	}
 	.contact, .rate{
 		font-size: 3vw !important;
+		top: 12vw;
 	}
 	.studydate, .date{
-		font-size: 3vw !important;
+		font-size: 2.6vw !important;
+		top: 18vw;
 		// right: 10vw !important;
+	}
+	.timeslot{
+		top: 26.5vw;
+		font-size: 2vw;
 	}
 	.loc-popup{
 	    position: absolute !important;
@@ -1466,7 +1476,7 @@ input[type="checkbox"]:focus{
 	    transition: -webkit-transform 0.3s;
 	    transition: transform 0.3s;
 	    transition: transform 0.3s, -webkit-transform 0.3s;
-	    font-size: 15px !important;
+	    font-size: 10px !important;
 	    display: inline-block !important;
 	}
 	.fa-map-marker{
