--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -59,18 +59,26 @@
                 				<%= subjuctivo.timeslots.join(', ')%>
                 			</div>
                     <div class="request_container nodisplay">
-                          <div class="tutorsendrequest">
-                                <%= form_tag(request_path(tutoremail: Person.find_by(id: subjuctivo.creatorid).email, whichSubject: subjuctivo.name, time: subjuctivo.date, timeslots: subjuctivo.timeslots), method: :post) do %> <!-- params[:name] is for the tutor's email I just have too much to do rn to change the attribute name -->
-                                  <div><p></p></div>
-                         	       <h4 class="findatutor_heading">Send request to tutor: </h4>
-                         	       <input type="text" name="email" id="email" placeholder="Enter your email" class = "form-control"><br>
-                         	        <input type="text" name="student" id="student" placeholder="Your name"  class = "form-control"><br> 
-                                  <input type="submit" name="commit" value="Send" data-disable-with="Send" id="specialanimatedbutton">
-                                <% end %>
-                                <i class="fa fa-times req-times"></i>
-                          </div>
+                      <div class="tutorsendrequest">
+                        <%= form_tag(request_path(tutoremail: Person.find_by(id: subjuctivo.creatorid).email, whichSubject: subjuctivo.name), method: :post) do %> <!-- params[:name] is for the tutor's email I just have too much to do rn to change the attribute name -->
+                          <h4 class="findatutor_heading">Send request to tutor: </h4>
+                            <input type="text" name="email" id="email" placeholder="Enter your email" class = "form-control">
+                         	  <input type="text" name="student" id="student" placeholder="Your name"  class = "form-control"><p></p> 
+                         	  <% if Person.find_by(id: subjuctivo.creatorid).academy %>
+                           	  <div id='dayOnSendRequestAcademy'><%= label_tag "Day:" %>
+                                <%= select_tag :time, options_for_select(subjuctivo.days.to_a), include_blank: true %>
+                                <%= label_tag "Time slot:" %>
+                                <%= select_tag :timeslots, options_for_select(subjuctivo.timeslots.to_a), include_blank: true %>
+                              </div>
+                            <% else %>
+                              <div id='dayOnSendRequest'><%= label_tag "Day:" %>
+                              <%= select_tag :time, options_for_select(subjuctivo.days.to_a), include_blank: true %></div>
+                            <% end %>
+                          <input type="submit" name="commit" value="Send" data-disable-with="Send" id="specialanimatedbutton">
+                        <% end %>
+                        <i class="fa fa-times req-times"></i>
+                      </div>
                     </div>
-                      <div><p></p></div>
             </div>
           <% end %>
    	  <% end %>
