--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -174,6 +174,10 @@ button:focus{
 	text-align: center;
 	display: inline-block;
 }
+.Findatutor{
+	font-size: 20px !important;
+	width: 14vw !important;
+}
 .animatedbutton{
 	margin: 20px auto;
 	display: block;
