--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,17 +16,14 @@
 			<p id="homep">Welcome to Tutor Matching! Click a button below to sign up to tutor others or to receive tutoring. </p>		
 		</div>
 			
+		<a href="/findatutor" id="animatedbutton" class="Findatutor">
+		  Find a tutor &#x1F50E
+		</a><div><p></p></div>
 		<% if !Person.find_by(id: session[:tutor_id]) %>
 	  		<a href="/tutorsignup" id="animatedbutton">
 	  		  Sign up as a tutor
 	  		</a>
   		<% end %>
-  		
-		<a href="/findatutor" id="animatedbutton">
-		  Find a tutor
-		</a>
-			
-		<div><p></p></div>
 		 <% if !Person.find_by(id: session[:tutor_id]) %>
 		  	<a href="/login" id="animatedbutton">
 		    Login
