--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -794,6 +794,13 @@ ul.tutors li img{
 	font-family: "Red Hat Text";
 	font-size: 0.9vw;
 }
+.selectTutor{
+	float: right;
+	position: absolute;
+	right: 21.5%;
+	top: 1.566vw;
+	font-size: 1.8229vw;
+}
 .tutorsendrequest{
 	// border: 1px solid black;
 	float: right;
