--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -799,6 +799,7 @@ ul.tutors li img{
 	position: absolute;
 	right: 21.5%;
 	top: 1.566vw;
+	box-shadow: 8px 5px 1px #081a80;
 	font-size: 1.8229vw;
 }
 .tutorsendrequest{
