Actually fixed problem with only one tutor being selectable

--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -18,88 +18,89 @@
 			
  	</div>
 
- 	<% @checker = false  %>
- 	    <% if @subjuctivos.nil? %>
- 	      <%= render 'shared/error_messages_search' %>
+  <% @checker = false  %>
+  <% if @subjuctivos.nil? %>
+   <%= render 'shared/error_messages_search' %>
  	      
- 	    <% else %>
-   	    <% @subjuctivos.each do |subjuctivo| %>
-   	        
-   	            <% if (Person.find_by(id: subjuctivo.creatorid).nil?)%>
-   	              
-   	            <% else %>
-   	                <% @checker = true %>
-   	                <div class = "tutordisplaycard searchresultslargecontainer">
-                			<div class="tutorgrade">
-                				<div class="tutorGradeLabel">
-                				  <h2>Grade</h2><%= Tutor.find_by(people_id: subjuctivo.creatorid).grade %>
-                				</div>
-                			</div>
-                			<div class="tutorname">
-                			   <%= Person.find_by(id: subjuctivo.creatorid).name %>
-                			</div>
-                			<div class="date">
-                				<%= subjuctivo.days.join(', ')%>
-                			</div>
-                			<% if Person.find_by(id: subjuctivo.creatorid).academy %>
-                			  <div class="rate">
-                    			Academy Tutor - Free
-                  			</div>
-                  			<div class="location">
-                    			 <i class="fa fa-map-marker fa-2x"></i>
-                    			  <!--<div class="loc-popup">CV Library</div>-->
-                    			  <div class="loc-popup">Virtual Tutoring</div>
-                    		</div>
-                			<% else %>
-                  			<div class="rate">
-                  				Rate: <%= subjuctivo.rate %>
-                  			</div>
-                  		<% end %>
-                  		<div class="timeslot">
-                				<%= subjuctivo.timeslots.join(', ')%>
-                			</div>
-                    
-                    
-                    <!-- Button trigger modal -->
-                    <button class="btn btn-success btn-xs selectTutor" data-toggle="modal" data-target="#approvalModal">
-                      Select
-                    </button>
-                    
-                    <!-- Modal -->
-                    <div class="modal fade" id="approvalModal" tabindex="-1" role="dialog" aria-labelledby="approvalModalLabel" aria-hidden="true">
-                      <div class="modal-dialog">
-                        <div class="modal-content">
-                          <div class="modal-header">
-                            <h4 class="modal-title">Selection</h4>
-                            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                          </div>
-                          <div class="modal-body">
-                             <%= form_tag(request_path(tutoremail: Person.find_by(id: subjuctivo.creatorid).email, whichSubject: subjuctivo.name), method: :post) do %> <!-- params[:name] is for the tutor's email I just have too much to do rn to change the attribute name -->
-                            <h4 class="findatutor_heading">Send request to tutor: </h4>
-                              <input type="text" name="student" id="student" placeholder="Your name"  class = "form-control"><p></p> 
-                              <input type="text" name="email" id="email" placeholder="Enter your email" class = "form-control">
-                           	  <% if Person.find_by(id: subjuctivo.creatorid).academy %>
-                             	  <div id='dayOnSendRequestAcademy'><%= label_tag "Day:" %>
-                                  <%= select_tag :time, options_for_select(subjuctivo.days.to_a), include_blank: true %>
-                                  <%= label_tag "Time slot:" %>
-                                  <%= select_tag :timeslots, options_for_select(subjuctivo.timeslots.to_a), include_blank: true %>
-                                </div>
-                              <% else %>
-                                <div id='dayOnSendRequest'><%= label_tag "Day:" %>
-                                <%= select_tag :time, options_for_select(subjuctivo.days.to_a), include_blank: true %></div>
-                              <% end %>
-                          </div>
-                          <div class="modal-footer">
-                            <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-                               <%= submit_tag "Submit Request", name: nil, class: "btn btn-success" %>
-                            <% end %>
-                          </div>
-                        </div><!-- /.modal-content -->
-                      </div><!-- /.modal-dialog -->
-                    </div><!-- /.modal -->
-                    
+  <% else %>
+    <% a = 0 %>
+    <% @subjuctivos.each do |subjuctivo| %>
+      <% a = a+1 %>
+      <% if (Person.find_by(id: subjuctivo.creatorid).nil?)%>
+       
+      <% else %>
+        <% @checker = true %>
+        <div class = "tutordisplaycard searchresultslargecontainer">
+          <div class="tutorgrade">
+            <div class="tutorGradeLabel">
+              <h2>Grade</h2><%= Tutor.find_by(people_id: subjuctivo.creatorid).grade %>
+            </div>
+          </div>
+          <div class="tutorname">
+             <%= Person.find_by(id: subjuctivo.creatorid).name %>
+          </div>
+          <div class="date">
+          	<%= subjuctivo.days.join(', ')%>
+          </div>
+          <% if Person.find_by(id: subjuctivo.creatorid).academy %>
+            <div class="rate">
+              Academy Tutor - Free
+            </div>
+            <div class="location">
+              <i class="fa fa-map-marker fa-2x"></i>
+              <!--<div class="loc-popup">CV Library</div>-->
+              <div class="loc-popup">Virtual Tutoring</div>
+            </div>
+          <% else %>
+            <div class="rate">
+            	Rate: <%= subjuctivo.rate %>
             </div>
           <% end %>
+          <div class="timeslot">
+          	<%= subjuctivo.timeslots.join(', ')%>
+          </div>
+        
+        
+        <!-- Button trigger modal -->
+        <button class="btn btn-success btn-xs selectTutor" data-toggle="modal" data-target="#<%= 'x'*a %>Modal">
+          Select
+        </button>
+        
+        <!-- Modal -->
+        <div class="modal fade" id="<%= 'x'*a %>Modal" tabindex="-1" role="dialog" aria-labelledby="<%= 'x'*a %>ModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title">Selection</h4>
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+              </div>
+              <div class="modal-body">
+                 <%= form_tag(request_path(tutoremail: Person.find_by(id: subjuctivo.creatorid).email, whichSubject: subjuctivo.name), method: :post) do %> <!-- params[:name] is for the tutor's email I just have too much to do rn to change the attribute name -->
+                <h4 class="findatutor_heading">Send request to tutor: </h4>
+                  <input type="text" name="student" id="student" placeholder="Your name"  class = "form-control"><p></p> 
+                  <input type="text" name="email" id="email" placeholder="Enter your email" class = "form-control">
+               	  <% if Person.find_by(id: subjuctivo.creatorid).academy %>
+                 	  <div id='dayOnSendRequestAcademy'><%= label_tag "Day:" %>
+                      <%= select_tag :time, options_for_select(subjuctivo.days.to_a), include_blank: true %>
+                      <%= label_tag "Time slot:" %>
+                      <%= select_tag :timeslots, options_for_select(subjuctivo.timeslots.to_a), include_blank: true %>
+                    </div>
+                  <% else %>
+                    <div id='dayOnSendRequest'><%= label_tag "Day:" %>
+                    <%= select_tag :time, options_for_select(subjuctivo.days.to_a), include_blank: true %></div>
+                  <% end %>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                   <%= submit_tag "Submit Request", name: nil, class: "btn btn-success" %>
+                <% end %>
+              </div>
+            </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+        
+          </div>
+  <% end %>
    	  <% end %>
      	  <% if !@checker %>
      	     <%= render 'shared/error_messages_search' %>
