--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -76,7 +76,7 @@
               </div>
               <div class="modal-body">
                  <%= form_tag(request_path(tutoremail: Person.find_by(id: subjuctivo.creatorid).email, whichSubject: subjuctivo.name), method: :post) do %> <!-- params[:name] is for the tutor's email I just have too much to do rn to change the attribute name -->
-                <h4 class="findatutor_heading">Send request to tutor: </h4>
+                <h4 class="findatutor_heading">Send a request to <%= Person.find_by(id: subjuctivo.creatorid).email %>: </h4>
                   <input type="text" name="student" id="student" placeholder="Your name"  class = "form-control"><p></p> 
                   <input type="text" name="email" id="email" placeholder="Enter your email" class = "form-control">
                	  <% if Person.find_by(id: subjuctivo.creatorid).academy %>
