removed location icon on tutor cards

--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -46,11 +46,11 @@
             <div class="rate">
               Academy Tutor - Free
             </div>
-            <div class="location">
-              <i class="fa fa-map-marker fa-2x"></i>
+            <!--<div class="location">-->
+            <!--  <i class="fa fa-map-marker fa-2x"></i>-->
               <!--<div class="loc-popup">CV Library</div>-->
-              <div class="loc-popup">Virtual Tutoring</div>
-            </div>
+            <!--  <div class="loc-popup">Virtual Tutoring</div>-->
+            <!--</div>-->
           <% else %>
             <div class="rate">
             	Rate: <%= subjuctivo.rate %>
