Added page for rosemont students to find tutors

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -178,6 +178,10 @@ button:focus{
 	font-size: 20px !important;
 	width: 14vw !important;
 }
+.FindatutorR{
+	font-size: 20px !important;
+	width: 14vw !important;
+}
 .animatedbutton{
 	margin: 20px auto;
 	display: block;
@@ -296,6 +300,9 @@ button:focus{
 }
 .container{
 	max-width: 100%;
+}
+#wrapper{
+  	display: inline-block;
 }
 #color{	
 	background-color: #eee;
