--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,10 +15,15 @@
 			<h1 id="homeh1">Tutor Matching</h1>
 			<p id="homep">Welcome to Tutor Matching! Click a button below to sign up to tutor others or to receive tutoring. </p>		
 		</div>
-			
-		<a href="/findatutor" id="animatedbutton" class="Findatutor">
-		  Find a tutor &#x1F50E
-		</a><div><p></p></div>
+		
+		<div id="wrapper">	
+			<a href="/findatutor" id="animatedbutton" class="Findatutor">
+			  Find a tutor &#x1F50E <br> (for CVHS students)
+			</a>
+			<a href="/findatutorRosemont" id="animatedbutton" class="FindatutorR">
+			  Find a tutor &#x1F50E <br>(for Rosemont students) 
+			</a><div><p></p></div>
+		</div>
 		<% if !Person.find_by(id: session[:tutor_id]) %>
 	  		<a href="/tutorsignup" id="animatedbutton">
 	  		  Sign up as a tutor
