--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -15,17 +15,29 @@
           <span style="font-weight: bold;"><%= f.label :subject %><br></span>
             <div id = "splitthecols">
               <% subjects = ['American Government','English 11','Biology','Chemistry', 'Applied Programming (buffet)', 'ELD','Earth Space Science','Economics','English 10 Honors','English 10','English 9 Advanced','English 9','English 12','French 1-2','French 3-4','French 5-6','German 1-2','German 3-4','German 5-6 Honors','German 5-6','Health','Human Geography', 'Integrated Math I','Integrated Math II Accelerated','Integrated Math II','Integrated Math III Accelerated','Integrated Math III','Intervention Math','Kinesiology','Korean 1-2','Korean 3-4','Korean 5-6','Linear Algebra Honors','Lit for Success','Math Analysis Honors','Math Analysis','Math Thinking','Medical Biology','Physics','Physiology Honors','Physiology','Psychology','Sociology','Spanish 1-2','Spanish 3-4','Spanish 5-6','Sports Medicine','Trigonometry/Statistics','US History','World History','AP Biology','AP Calculus AB','AP Calculus BC','AP Chemistry','AP Computer Science', 'AP Economics','AP English Language','AP English Literature','AP Environmental Science','AP European History','AP French Language','AP German Language','AP Government/Politics','AP Human Geography','AP Physics 1','AP Physics 2','AP Physics C','AP Psychology','AP Spanish Language (7-8)','AP Spanish Literature (9-10)','AP Statistics','AP US History'] %>
+              <span id="checkbox-desktop-subjects">
+                <% subjects.each do |i| %>
+                  <%= f.check_box :Multiplesubjects, { multiple: true, :style => "width: 25px; height: 25px;" }, i, nil %>
+                  <%= f.label(:subjects, i) %><br>
+                <% end %>
+              </span>
+              <!--<span id="dropdown-responsive-subjects">-->
+              <!--   %= f.select :Multiplesubjects, options_for_select(['American Government','English 11','Biology','Chemistry', 'Applied Computer Programming (buffet)', 'ELD','Earth Space Science','Economics','English 10 Honors','English 10','English 9 Advanced','English 9','English 12','French 1-2','French 3-4','French 5-6','German 1-2','German 3-4','German 5-6 Honors','German 5-6','Health','Human Geography', 'Integrated Math I','Integrated Math II Accelerated','Integrated Math II','Integrated Math III Accelerated','Integrated Math III','Intervention Math','Kinesiology','Korean 1-2','Korean 3-4','Korean 5-6','Linear Algebra Honors','Lit for Success','Math Analysis Honors','Math Analysis','Math Thinking','Medical Biology','Physics','Physiology Honors','Physiology','Psychology','Sociology','Spanish 1-2','Spanish 3-4','Spanish 5-6','Sports Medicine','Trigonometry/Statistics','US History','World History','AP Biology','AP Calculus AB','AP Calculus BC','AP Chemistry','AP Computer Science', 'AP Economics','AP English Language','AP English Literature','AP Environmental Science','AP European History','AP French Language','AP German Language','AP Government/Politics','AP Human Geography','AP Physics 1','AP Physics 2','AP Physics C','AP Psychology','AP Spanish Language (7-8)','AP Spanish Literature (9-10)','AP Statistics','AP US History']), { multiple: true, include_blank: 'None', class: "form-control"} %>-->
+            </div>
+          </span>
+          <% if Person.find(session[:tutor_id]).academy %>
+            <span style="font-weight: bold;"><%= f.label "Rosemont Subjects (select any of these if you want to tutor Rosemont middle school students)" %><br></span>      
+              <div id = "splitthecols">
+                <% rosemontSubjects = ['English (Rosemont)','History (Rosemont)', 'Math (Rosemont)', 'Science (Rosemont)', 'Languages (Rosemont)'] %>
                 <span id="checkbox-desktop-subjects">
-                  <% subjects.each do |i| %>
+                  <% rosemontSubjects.each do |i| %>
                     <%= f.check_box :Multiplesubjects, { multiple: true, :style => "width: 25px; height: 25px;" }, i, nil %>
                     <%= f.label(:subjects, i) %><br>
                     <% end %>
                 </span>
-                <!--<span id="dropdown-responsive-subjects">-->
-                <!--   %= f.select :Multiplesubjects, options_for_select(['American Government','English 11','Biology','Chemistry', 'Applied Computer Programming (buffet)', 'ELD','Earth Space Science','Economics','English 10 Honors','English 10','English 9 Advanced','English 9','English 12','French 1-2','French 3-4','French 5-6','German 1-2','German 3-4','German 5-6 Honors','German 5-6','Health','Human Geography', 'Integrated Math I','Integrated Math II Accelerated','Integrated Math II','Integrated Math III Accelerated','Integrated Math III','Intervention Math','Kinesiology','Korean 1-2','Korean 3-4','Korean 5-6','Linear Algebra Honors','Lit for Success','Math Analysis Honors','Math Analysis','Math Thinking','Medical Biology','Physics','Physiology Honors','Physiology','Psychology','Sociology','Spanish 1-2','Spanish 3-4','Spanish 5-6','Sports Medicine','Trigonometry/Statistics','US History','World History','AP Biology','AP Calculus AB','AP Calculus BC','AP Chemistry','AP Computer Science', 'AP Economics','AP English Language','AP English Literature','AP Environmental Science','AP European History','AP French Language','AP German Language','AP Government/Politics','AP Human Geography','AP Physics 1','AP Physics 2','AP Physics C','AP Psychology','AP Spanish Language (7-8)','AP Spanish Literature (9-10)','AP Statistics','AP US History']), { multiple: true, include_blank: 'None', class: "form-control"} %>-->
-                <!--</span>-->
-                            
-            </div>
+              </div>
+            </span>
+          <%end%>
               
           <span style="font-weight: bold;"><%= f.label "Tutoring day(s):" %></span><br>
             <%= f.check_box :days, { multiple: true, :style => "width: 25px; height: 25px;" }, "Monday", nil %>
